Add missing topology
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/tht/config/general_config/featureset062.yml
+++ b/tht/config/general_config/featureset062.yml
@@ -69,3 +69,8 @@ run_tempest: false
 run_tripleo_validations: false
 run_tripleo_validations_negative_tests: false
 composable_roles: false
+
+# Tell tripleo which nodes to deploy (seems like missing in the nodes config!)
+topology: >-
+  --compute-scale 1
+  --control-scale 1
