--- a/tht/config/general_config/featureset062.yml
+++ b/tht/config/general_config/featureset062.yml
@@ -18,12 +18,12 @@ enable_swap: true
 swap_type: file
 enable_pacemaker: false
 network_isolation: true
-network_isolation_type: "single-nic-vlans"
-# Not sure if those work on libvirt for host cloud and ovb on top?
-#network_isolation_type: "multiple-nics"
-#network_isolation_args: >-
-#  -e {{ overcloud_templates_path }}/ci/environments/network/multiple-nics/network-isolation-absolute.yaml
-#  -e {{ overcloud_templates_path }}/ci/environments/network/multiple-nics/network-environment.yaml
+# FIXME: single-nic-vlans produces invalid net config with missing controller/compute.yaml
+#network_isolation_type: "single-nic-vlans"
+network_isolation_type: "multiple-nics"
+network_isolation_args: >-
+  -e {{ overcloud_templates_path }}/ci/environments/network/multiple-nics/network-isolation-absolute.yaml
+  -e {{ overcloud_templates_path }}/ci/environments/network/multiple-nics/network-environment.yaml
 overcloud_ipv6: false
 containerized_overcloud: true
 containerized_undercloud: true
@@ -68,7 +68,118 @@ test_ping: false
 run_tempest: false
 run_tripleo_validations: false
 run_tripleo_validations_negative_tests: false
-composable_roles: false
+
+# This should not be used with OVB envs deployed from this fs62
+use_resource_registry_nic_configs: false
+#resource_registry_args:
+#  OS::TripleO::Controller::Net::SoftwareConfig: {{ overcloud_templates_path }}/ci/common/net-config-multinode.yaml
+#  OS::TripleO::Compute::Net::SoftwareConfig: {{ overcloud_templates_path }}/ci/common/net-config-multinode.yaml
+
+composable_roles: true
+overcloud_roles:
+  - name: Controller
+    HostnameFormatDefault: '%stackname%-controller-%index%'
+    CountDefault: 1
+    default_route_networks: ['External']
+    uses_deprecated_params: True
+    deprecated_param_extraconfig: 'controllerExtraConfig'
+    deprecated_param_flavor: 'OvercloudControlFlavor'
+    deprecated_param_image: 'controllerImage'
+    deprecated_nic_config_name: 'controller.yaml'
+    tags:
+      - primary
+      - controller
+    networks:
+      - External
+      - InternalApi
+      - Storage
+      - StorageMgmt
+      - Tenant
+    ServicesDefault:
+      - OS::TripleO::Services::Docker
+      - OS::TripleO::Services::Kernel
+      - OS::TripleO::Services::Keystone
+      - OS::TripleO::Services::GlanceApi
+      - OS::TripleO::Services::HeatApi
+      - OS::TripleO::Services::HeatApiCfn
+      - OS::TripleO::Services::HeatEngine
+      - OS::TripleO::Services::IronicApi
+      - OS::TripleO::Services::IronicConductor
+      - OS::TripleO::Services::IronicInspector
+      - OS::TripleO::Services::IronicPxe
+      - OS::TripleO::Services::CinderApi
+      - OS::TripleO::Services::CinderScheduler
+      - OS::TripleO::Services::CinderVolume
+      - OS::TripleO::Services::SwiftProxy
+      - OS::TripleO::Services::SwiftStorage
+      - OS::TripleO::Services::SwiftRingBuilder
+      - OS::TripleO::Services::MySQL
+      - OS::TripleO::Services::MySQLClient
+      - OS::TripleO::Services::NeutronDhcpAgent
+      - OS::TripleO::Services::NeutronL3Agent
+      - OS::TripleO::Services::NeutronMetadataAgent
+      - OS::TripleO::Services::NeutronServer
+      - OS::TripleO::Services::NeutronCorePlugin
+      - OS::TripleO::Services::NeutronOvsAgent
+      - OS::TripleO::Services::RabbitMQ
+      - OS::TripleO::Services::Memcached
+      - OS::TripleO::Services::NovaConductor
+      - OS::TripleO::Services::NovaApi
+      - OS::TripleO::Services::NovaIronic
+      - OS::TripleO::Services::NovaPlacement
+      - OS::TripleO::Services::NovaMetadata
+      - OS::TripleO::Services::NovaScheduler
+      - OS::TripleO::Services::Ntp
+      - OS::TripleO::Services::ContainersLogrotateCrond
+      - OS::TripleO::Services::Sshd
+      - OS::TripleO::Services::Iscsid
+      - OS::TripleO::Services::Timezone
+      - OS::TripleO::Services::Redis
+      - OS::TripleO::Services::Zaqar
+      - OS::TripleO::Services::TripleoPackages
+      - OS::TripleO::Services::TripleoFirewall
+  - name: Compute
+    disable_upgrade_deployment: True
+    HostnameFormatDefault: '%stackname%-novacompute-%index%'
+    ServicesDefault: []
+    CountDefault: 1
+    uses_deprecated_params: True
+    deprecated_param_image: 'NovaImage'
+    deprecated_param_extraconfig: 'NovaComputeExtraConfig'
+    deprecated_param_metadata: 'NovaComputeServerMetadata'
+    deprecated_param_scheduler_hints: 'NovaComputeSchedulerHints'
+    deprecated_param_ips: 'NovaComputeIPs'
+    deprecated_server_resource_name: 'NovaCompute'
+    deprecated_nic_config_name: 'compute.yaml'
+    tags:
+      - compute
+    networks:
+      - External
+      - InternalApi
+      - Storage
+      - StorageMgmt
+      - Tenant
+    ServicesDefault:
+      - OS::TripleO::Services::CACerts
+      - OS::TripleO::Services::CertmongerUser
+      - OS::TripleO::Services::ComputeNeutronCorePlugin
+      - OS::TripleO::Services::ComputeNeutronL3Agent
+      - OS::TripleO::Services::ComputeNeutronMetadataAgent
+      - OS::TripleO::Services::ComputeNeutronOvsAgent
+      - OS::TripleO::Services::Docker
+      - OS::TripleO::Services::Iscsid
+      - OS::TripleO::Services::Kernel
+      - OS::TripleO::Services::MySQLClient
+      - OS::TripleO::Services::NovaCompute
+      - OS::TripleO::Services::NovaLibvirt
+      - OS::TripleO::Services::NovaMigrationTarget
+      - OS::TripleO::Services::Ntp
+      - OS::TripleO::Services::ContainersLogrotateCrond
+      - OS::TripleO::Services::Snmp
+      - OS::TripleO::Services::Sshd
+      - OS::TripleO::Services::Timezone
+      - OS::TripleO::Services::TripleoFirewall
+      - OS::TripleO::Services::TripleoPackages
 
 # Tell tripleo which nodes to deploy (seems like missing in the nodes config!)
 topology: >-
