Undo non-stack user fixes for some cases
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/playbooks/oooq-libvirt-provision.yaml
+++ b/playbooks/oooq-libvirt-provision.yaml
@@ -13,6 +13,7 @@
     - { role: environment/setup, when: teardown|bool }
     - { role: libvirt/teardown, when: teardown|bool }
     - role: libvirt/setup/user
+      ssh_user: "{{ lookup('env', 'USER') }}"
       become: false
       ansible_user_id: "{{ non_root_user }}"
       when: teardown|bool
