Fix repo setup and dlrn_facts overrides
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/playbooks/oooq-libvirt-under-openshift.yaml
+++ b/playbooks/oooq-libvirt-under-openshift.yaml
@@ -8,8 +8,13 @@
   hosts: undercloud
   vars_files:
     - ../vars/undercloud-only-local.yaml
+    - ../vars/repodata.yaml
+  pre_tasks:
+    - meta: clear_facts
   roles:
-    - {role: repo-setup,  when: configure_repos|bool}
+    - role: repo-setup
+      dlrn_hash: "{{release}}"
+      when: configure_repos|bool
 
 - name: Install the client
   hosts: undercloud
