--- a/vars/undercloud-only-local.yaml
+++ b/vars/undercloud-only-local.yaml
@@ -1,6 +1,13 @@
 # Undercloud all-in-one libvirt scenario to host openshift VMs.
 # Replace custom.yaml with that file or specify it via CUSTOMVARS.
 # Based on fs027 from quickstart.
+undercloud_user: stack
+overcloud_user: heat-admin
+ssh_user: "{{ undercloud_user }}"
+non_root_user: "{{ undercloud_user }}"
+non_root_group: "{{ undercloud_user }}"
+local_working_dir: "{{ lookup('env', 'LWD') }}"
+working_dir: /home/{{ undercloud_user }}
 undercloud_vcpu: 6
 undercloud_memory: 20480
 undercloud_use_custom_boot_images: false
@@ -19,17 +26,6 @@ extra_tht_configs: /tmp/scripts/tht
 configure_repos: true
 release: master
 dlrn_hash_tag: current-tripleo
-repos:
-  - type: generic
-    reponame: delorean
-    filename: delorean.repo
-    baseurl: https://trunk.rdoproject.org/centos7-{{ release }}/{{ dlrn_hash }}/
-    hash_url: https://trunk.rdoproject.org/centos7-{{ release }}/{{ dlrn_hash }}/delorean.repo
-    priority: 20
-  - type: file
-    filename: delorean-deps.repo
-    down_url: http://trunk.rdoproject.org/centos7-{{ release }}/delorean-deps.repo
-repo_cmd_after: ''
 undercloud_cloud_domain: rdocloud
 undercloud_extra_services_args: >-
   -e {{overcloud_templates_path}}/environments/services-docker/undercloud-cinder.yaml
