--- a/vars/undercloud-only-local.yaml
+++ b/vars/undercloud-only-local.yaml
@@ -1,4 +1,4 @@
-# Undercloud all-in-one libvirt scenario to host openshift VMs.
+# Undercloud TLS all-in-one BM/VM-libvirt scenario to host openshift VMs.
 # Replace custom.yaml with that file or specify it via CUSTOMVARS.
 # Based on fs027 from quickstart.
 undercloud_user: stack
@@ -27,12 +27,19 @@ configure_repos: true
 release: master
 dlrn_hash_tag: current-tripleo
 undercloud_cloud_domain: rdocloud
+undercloud_enable_ironic: false
+undercloud_enable_ironic_inspector: false
+undercloud_enable_telemetry: false
+undercloud_enable_zaqar: true
+undercloud_enable_mistral: true
+# Should only be re-enabled on a 2nd deploy run
+#-e {{overcloud_templates_path}}/environments/services-docker/octavia.yaml
 undercloud_extra_services_args: >-
   -e {{overcloud_templates_path}}/environments/services-docker/undercloud-cinder.yaml
   -e {{overcloud_templates_path}}/environments/disable-telemetry.yaml
-  -e {{working_dir}}/network-environment.yaml
   -e {{working_dir}}/undercloud-parameter-defaults.yaml
   -e {{working_dir}}/tht/environments/all-in-one-local.yaml
+  -e {{overcloud_templates_path}}/environments/docker.yaml
 containerized_undercloud: true
 step_install_undercloud: true
 undercloud_install_script: undercloud-deploy.sh.j2
@@ -70,7 +77,14 @@ overcloud_dns_servers:
   - 208.67.222.220
 undercloud_undercloud_nameservers:
   - 208.67.222.220
-network_environment_args:
+undercloud_resource_registry_args:
+  "OS::TripleO::Undercloud::Net::SoftwareConfig": "{{ overcloud_templates_path }}/net-config-undercloud.yaml"
+  "OS::TripleO::Network::Ports::RedisVipPort": "{{ overcloud_templates_path }}/network/ports/noop.yaml"
+  "OS::TripleO::Network::Ports::ControlPlaneVipPort": "{{ overcloud_templates_path }}/deployed-server/deployed-neutron-port.yaml"
+  "OS::TripleO::NodeExtraConfigPost": "{{ overcloud_templates_path }}/extraconfig/post_deploy/undercloud_post.yaml"
+  "OS::TripleO::Services::DockerRegistry": "{{ overcloud_templates_path }}/puppet/services/docker-registry.yaml"
+  "OS::TripleO::Network::Ports::ExternalVipPort": "{{ overcloud_templates_path }}/network/ports/external_from_pool.yaml"
+undercloud_network_environment_args:
   ExternalNetCidr: "{{ undercloud_external_network_cidr }}"
   ExternalAllocationPools: >
     [{'start': '{{ undercloud_external_network_cidr|nthhost(128) }}',
@@ -79,3 +93,11 @@ network_environment_args:
   ControlPlaneDefaultRoute: "{{ undercloud_network_cidr|nthhost(1) }}"
   EC2MetadataIp: "{{ undercloud_network_cidr|nthhost(1) }}"
   DnsServers: "{{ overcloud_dns_servers }}"
+  ControlPlaneStaticRoutes: []
+  UndercloudCtlplaneSubnets:
+    ctlplane-subnet:
+      NetworkCidr: "{{ undercloud_network_cidr }}"
+      NetworkGateway: "{{ undercloud_network_cidr|nthhost(1) }}"
+      DhcpRangeStart: "{{ undercloud_network_cidr|nthhost(5) }}"
+      DhcpRangeEnd: "{{ undercloud_network_cidr|nthhost(24) }}"
+  UndercloudCtlplaneLocalSubnet: 'ctlplane-subnet'
