Fix opinionated dlrn_hash_tag/release customs
And drop DLRN_HASH env var, as not needed.

Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/tht/config/general_config/featureset062.yml
+++ b/tht/config/general_config/featureset062.yml
@@ -15,7 +15,7 @@ undercloud_enable_tempest: false
 undercloud_type: virtual
 
 # overrides the hash in releases configs
-dlrn_hash_tag: "{{ lookup('env', 'DLRN_HASH') }}"
+dlrn_hash_tag: current-tripleo
 enable_swap: true
 swap_type: file
 enable_pacemaker: false
