--- a/vars/repodata.yaml
+++ b/vars/repodata.yaml
@@ -1,25 +1,24 @@
 # Custom DLRN repos, WARN: do not collide it with config/releases!
 # May be disabled if user data script handles it for pre-provisioned nodes
 configure_repos: true
-overcloud_release: "{{release}}"
+overcloud_release: "{{release|default('master')}}"
 gating_repo_enabled: false
 # https://review.openstack.org/#/c/465043/
 #repos:
 #  - type: tripleo-repos
-#    bundle: current
-#    release: master
-dlrn_hash_tag: current-tripleo
+#    bundle: "{{dlrn_hash_tag|default('current-tripleo')}}"
+#    release: "{{release|default('master')}}"
 repos:
   - type: generic
     reponame: delorean
     filename: delorean.repo
-    baseurl: https://trunk.rdoproject.org/centos7-{{ release }}/{{ dlrn_hash_tag }}/
-    hash_url: https://trunk.rdoproject.org/centos7-{{ release }}/{{ dlrn_hash_tag }}/delorean.repo
+    baseurl: https://trunk.rdoproject.org/centos7-{{ release|default('master') }}/{{ dlrn_hash_tag|default('current-tripleo') }}/
+    hash_url: https://trunk.rdoproject.org/centos7-{{ release|default('master') }}/{{ dlrn_hash_tag|default('current-tripleo') }}/delorean.repo
     priority: 20
 
   - type: file
     filename: delorean-deps.repo
-    down_url: http://trunk.rdoproject.org/centos7-{{ release }}/delorean-deps.repo
+    down_url: http://trunk.rdoproject.org/centos7-{{ release|default('master') }}/delorean-deps.repo
 
 #  - type: package
 #    pkg_name: centos-release-ceph-jewel
