--- a/playbooks/oooq-libvirt-under.yaml
+++ b/playbooks/oooq-libvirt-under.yaml
@@ -12,6 +12,8 @@
     - meta: clear_facts
   roles:
     - role: repo-setup
+      local_working_dir: "{{ lookup('env', 'LWD') }}"
+      working_dir: /home/{{ undercloud_user }}
       when: configure_repos|bool
 
 - name: Install the client
@@ -29,6 +31,9 @@
   gather_facts: false
   vars_files:
     - ../vars/undercloud-local.yaml
+  vars:
+    local_working_dir: "{{ lookup('env', 'LWD') }}"
+    working_dir: /home/{{ undercloud_user }}
   tasks:
     - copy:
         src: /tmp/scripts/tht
@@ -45,4 +50,6 @@
   vars_files:
     - ../vars/undercloud-local.yaml
   roles:
-    - undercloud-deploy
+    - role: undercloud-deploy
+      local_working_dir: "{{ lookup('env', 'LWD') }}"
+      working_dir: /home/{{ undercloud_user }}
