--- a/vars/undercloud-only-local.yaml
+++ b/vars/undercloud-only-local.yaml
@@ -1,23 +1,10 @@
 # Undercloud TLS all-in-one BM/VM-libvirt scenario to host openshift VMs.
-# Replace custom.yaml with that file or specify it via CUSTOMVARS.
+# Must be applied top-scope via -e@.
 # Based on fs027 from quickstart.
-undercloud_user: stack
-overcloud_user: heat-admin
-ssh_user: "{{ undercloud_user }}"
-non_root_user: "{{ undercloud_user }}"
-non_root_group: "{{ undercloud_user }}"
-local_working_dir: "{{ lookup('env', 'LWD') }}"
-working_dir: /home/{{ undercloud_user }}
 undercloud_vcpu: 6
 undercloud_memory: 20480
 undercloud_use_custom_boot_images: false
 undercloud_image_url: file://{{ image_cache_dir }}/undercloud.qcow2
-# NOTE: This may be needed if undercloud image contains outdated initrd/vmlinuz!
-#update_images: true
-## We have nothing to inject, but it can't be empty string to make overcloud
-## as undercloud magic working
-#inject_images: ['ironic-python-agent.tar.md5']
-#overcloud_as_undercloud: true
 enable_opstools_repo: false
 deployed_server: false
 deploy_multinode: false
