WIP ext net fixes
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/tht/config/general_config/featureset127.yml
+++ b/tht/config/general_config/featureset127.yml
@@ -95,7 +95,9 @@ undercloud_network_environment_args:
   ControlPlaneDefaultRoute: "{{ undercloud_network_cidr|nthhost(1) }}"
   EC2MetadataIp: "{{ undercloud_network_cidr|nthhost(1) }}"
   DnsServers: "{{ overcloud_dns_servers }}"
-  ControlPlaneStaticRoutes: []
+  ControlPlaneStaticRoutes:
+    - ip_netmask: "{{ undercloud_external_network_cidr }}"
+      next_hop: "{{ undercloud_external_network_cidr|nthhost(1) }}"
   UndercloudCtlplaneSubnets:
     ctlplane-subnet:
       NetworkCidr: "{{ undercloud_network_cidr }}"
