Do not override vars fs127 top scope
* undercloud_ip needs to match libvirt eth0 IP for
provision tasks, but it might differ for the UC
deploy config.
* there are more vars defined from vars/ or custom.yaml

Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/playbooks/oooq-libvirt-under.yaml
+++ b/playbooks/oooq-libvirt-under.yaml
@@ -34,6 +34,7 @@
   vars:
     local_working_dir: "{{ lookup('env', 'LWD') }}"
     working_dir: /home/{{ undercloud_user }}
+    undercloud_user: stack
   tasks:
     - copy:
         src: /tmp/scripts/tht
