--- a/playbooks/oooq-libvirt-under-openshift.yaml
+++ b/playbooks/oooq-libvirt-under-openshift.yaml
@@ -32,6 +32,7 @@
   vars:
     local_working_dir: "{{ lookup('env', 'LWD') }}"
     working_dir: /home/{{ undercloud_user }}
+    undercloud_user: stack
   tasks:
     - copy:
         src: /tmp/scripts/tht
