--- a/tht/config/general_config/featureset127.yml
+++ b/tht/config/general_config/featureset127.yml
@@ -1,6 +1,7 @@
-# Undercloud TLS all-in-one BM/VM-libvirt scenario to host openshift VMs.
+# Undercloud TLS all-in-one BM(maybe) and VM-libvirt scenario to host openshift VMs.
 # Must be applied top-scope via -e@.
 # Based on fs027 from quickstart.
+# Assumes eth0 is libvirt brext or phys ext-net. And eth1 is internal ctlplane (phys/brovc).
 undercloud_vcpu: 6
 undercloud_memory: 20480
 enable_opstools_repo: false
@@ -8,28 +9,32 @@ deployed_server: false
 deploy_multinode: false
 extra_tht_configs: /tmp/scripts/tht
 configure_repos: true
+enable_vbmc: false
+undercloud_enable_ui: false
+enable_libvirt_tripleo_ui: false
 release: master
 dlrn_hash_tag: current-tripleo
-undercloud_cloud_domain: rdocloud
+undercloud_cloud_domain: localdomain
 undercloud_enable_ironic: false
 undercloud_enable_ironic_inspector: false
 undercloud_enable_telemetry: false
 undercloud_enable_zaqar: true
 undercloud_enable_mistral: true
-# Should only be re-enabled on a 2nd deploy run
-#-e {{overcloud_templates_path}}/environments/services-docker/octavia.yaml
-undercloud_extra_services_args: >-
-  -e {{overcloud_templates_path}}/environments/services-docker/undercloud-cinder.yaml
-  -e {{overcloud_templates_path}}/environments/disable-telemetry.yaml
-  -e {{working_dir}}/undercloud-parameter-defaults.yaml
-  -e {{working_dir}}/tht/environments/all-in-one-local.yaml
-  -e {{overcloud_templates_path}}/environments/docker.yaml
-undercloud_install_script: undercloud-deploy.sh.j2
+undercloud_install_cli_options: " --use-heat"
+# FIXME hack in self-hosted Mistral for octavia:
+# that env file should only be added on a 2nd deploy run!
+# {{overcloud_templates_path}}/environments/services-docker/octavia.yaml
+undercloud_custom_env_files: >-
+ {{overcloud_templates_path}}/environments/services-docker/undercloud-cinder.yaml,
+ {{overcloud_templates_path}}/environments/disable-telemetry.yaml,
+ {{working_dir}}/undercloud-parameter-defaults.yaml,
+ {{working_dir}}/tht/environments/all-in-one-local.yaml
+# FIXME undercloud-deploy.sh can not be used with a custom undercloud_ip,
+# different to the one generated with libivrt setup inventory tasks
+undercloud_install_script: undercloud-install.sh.j2
 undercloud_docker_registry_host: docker.io
 undercloud_docker_registry_namespace: tripleomaster
 undercloud_docker_image_tag: "{{ dlrn_hash_tag }}"
-extra_args: >-
-  --ntp-server pool.ntp.org
 network_isolation: false
 enable_pacemaker: false
 overcloud_ipv6: false
@@ -50,27 +55,33 @@ run_tempest: false
 enable_port_forward_for_tripleo_ui: false
 delete_docker_cache: true
 undercloud_rpm_dependencies: "python-tripleoclient*"
-#local_docker_registry_host: "{{ hostvars['undercloud'].undercloud_ip }}"
-undercloud_network_cidr: 192.168.0.0/24
-# It should be eth1, which is brovc connected for the libvirt case
+# The internal/isolated ctlplane network CIDR
+# TODO try it flat with the ext net prolly
+undercloud_network_cidr: 192.168.25.0/24
 undercloud_local_interface: eth1
-# It should match the libvirt brovc CIDR and
-# ExternalAllocationPools to not overlap with brovc's dhcp ranges
-undercloud_external_network_cidr: 192.168.23.0/24
-external_network_cidr: "{{ undercloud_external_network_cidr }}"
-local_docker_registry_host: "{{ undercloud_network_cidr|nthhost(1) }}"
-undercloud_local_ip: "{{ undercloud_network_cidr|nthhost(1) }}"
 undercloud_network_gateway: "{{ undercloud_network_cidr|nthhost(1) }}"
-# Assumes libvirt brovc dhcp range ends on .50
-undercloud_undercloud_public_vip: "{{ undercloud_external_network_cidr|nthhost(51) }}"
-undercloud_undercloud_admin_vip: "{{ undercloud_network_cidr|nthhost(1) }}"
-undercloud_masquerade_network: "{{ undercloud_network_cidr }}"
-undercloud_dhcp_start: "{{ undercloud_network_cidr|nthhost(5) }}"
-undercloud_dhcp_end: "{{ undercloud_network_cidr|nthhost(24) }}"
-undercloud_inspection_iprange: "{{ undercloud_network_cidr|nthhost(25) }},{{ undercloud_network_cidr|nthhost(39) }}"
-overcloud_dns_servers:
-  - "{{ undercloud_network_cidr|nthhost(2) }}"
-  - 208.67.222.220
+undercloud_local_ip: "{{ hostvars['undercloud'].undercloud_ip }}/{{ undercloud_network_cidr|ipaddr('prefix') }}"
+# Use remote/local KVM host registry IP otherwise
+# e.g. undercloud_external_network_cidr|nthhost(1)
+local_docker_registry_host: "{{ hostvars['undercloud'].undercloud_ip }}"
+# The external (to UC) network CIDR and interface routed from the remote
+# ansible control node or local libvirt host. We want it reachable from
+# outside (or local KVM host), for ansible to access Heat et al APIs and
+# provision VMs for openshift clusters.
+# Undercloud_ip comes from it at the libvirt-provision stage.
+undercloud_external_network_cidr: 192.168.23.0/24
+undercloud_external_network_gateway: "{{ undercloud_external_network_cidr|nthhost(1) }}"
+# Assumes the external/admin network dhcp range ends on .50
+undercloud_undercloud_public_host: "{{ undercloud_external_network_cidr|nthhost(51) }}"
+undercloud_undercloud_admin_host: "{{ undercloud_network_cidr|nthhost(52) }}"
+# FIXME Or should these be undercloud_network_cidr?..
+# It would be nice to provision non-nested VMs, which reside on the external
+# libvirt/BM network instead of the isolated ctlplane!
+undercloud_masquerade_network: "{{ undercloud_external_network_cidr }}"
+undercloud_dhcp_start: "{{ undercloud_external_network_cidr|nthhost(60) }}"
+undercloud_dhcp_end: "{{ undercloud_external_network_cidr|nthhost(69) }}"
+# Not really used here as all-in-one does not include Ironic (for now)
+undercloud_inspection_iprange: "{{ undercloud_external_network_cidr|nthhost(70) }},{{ undercloud_external_network_cidr|nthhost(79) }}"
 undercloud_undercloud_nameservers:
   - 208.67.222.220
 undercloud_resource_registry_args:
@@ -86,19 +97,25 @@ undercloud_network_environment_args:
     [{'start': '{{ undercloud_external_network_cidr|nthhost(128) }}',
     'end': '{{ undercloud_external_network_cidr|nthhost(250) }}'}]
   ControlPlaneSubnetCidr: "{{ undercloud_network_cidr|ipaddr('prefix') }}"
-  ControlPlaneDefaultRoute: "{{ undercloud_network_cidr|nthhost(1) }}"
-  EC2MetadataIp: "{{ undercloud_network_cidr|nthhost(1) }}"
-  DnsServers: "{{ overcloud_dns_servers }}"
+  ControlPlaneDefaultRoute: "{{ undercloud_network_gateway }}"
+  EC2MetadataIp: "{{ hostvars['undercloud'].undercloud_ip }}"
+  DnsServers: "{{ undercloud_undercloud_nameservers }}"
   ControlPlaneStaticRoutes:
+    - ip_netmask: 169.254.169.254/32
+      next_hop: "{{ undercloud_network_gateway }}"
+    - ip_netmask: "{{ undercloud_network_cidr }}"
+      next_hop: "{{ undercloud_network_gateway }}"
     - ip_netmask: "{{ undercloud_external_network_cidr }}"
-      next_hop: "{{ undercloud_external_network_cidr|nthhost(1) }}"
+      next_hop: "{{ undercloud_external_network_gateway }}"
+    - ip_netmask: 0.0.0.0/0
+      next_hop: "{{ undercloud_external_network_gateway }}"
   UndercloudCtlplaneSubnets:
     ctlplane-subnet:
       NetworkCidr: "{{ undercloud_network_cidr }}"
-      NetworkGateway: "{{ undercloud_network_cidr|nthhost(1) }}"
+      NetworkGateway: "{{ undercloud_network_gateway }}"
       DhcpRangeStart: "{{ undercloud_network_cidr|nthhost(5) }}"
       DhcpRangeEnd: "{{ undercloud_network_cidr|nthhost(24) }}"
   UndercloudCtlplaneLocalSubnet: 'ctlplane-subnet'
-  # It should be eth0, which is brext connected for the libvirt case
-  NeutronPublicInterface: eth0
-  HypervisorNeutronPublicInterface: eth0
+  # It should match the undercloud_local_interface value
+  NeutronPublicInterface: eth1
+  HypervisorNeutronPublicInterface: eth1
