--- a/tht/config/general_config/featureset127.yml
+++ b/tht/config/general_config/featureset127.yml
@@ -13,7 +13,7 @@ enable_vbmc: false
 undercloud_enable_ui: false
 enable_libvirt_tripleo_ui: false
 release: master
-dlrn_hash_tag: current-tripleo
+dlrn_hash_tag: current
 undercloud_undercloud_debug: false
 undercloud_cloud_domain: localdomain
 undercloud_enable_ironic: false
@@ -34,7 +34,8 @@ undercloud_custom_env_files: >-
 undercloud_install_script: undercloud-install.sh.j2
 undercloud_docker_registry_host: docker.io
 undercloud_docker_registry_namespace: tripleomaster
-undercloud_docker_image_tag: "{{ dlrn_hash_tag }}"
+# FIXME There is no current tag available?
+undercloud_docker_image_tag: current-tripleo
 network_isolation: false
 enable_pacemaker: false
 overcloud_ipv6: false
